Fixed translation and added logos

--- a/locale/ro/LC_MESSAGES/django.po
+++ b/locale/ro/LC_MESSAGES/django.po
@@ -185,3 +185,10 @@ msgstr "Administrația Parcului Natural Bucegi"
 msgid "Home"
 msgstr "Acasă"
 
+#: general/base.html
+msgid "Administration"
+msgstr "Administrare"
+
+#: general/base.html
+msgid "Add new Timesheet"
+msgstr "Introdu activități"
