--- a/locale/ro/LC_MESSAGES/django.po
+++ b/locale/ro/LC_MESSAGES/django.po
@@ -190,8 +190,8 @@ msgid "Administration"
 msgstr "Administrare"
 
 #: general/base.html
-msgid "Add new Timesheet"
-msgstr "Introdu activități"
+msgid "Timesheet List"
+msgstr "Listă activități"
 
 # Reports
 msgid "Generate Work Report"
@@ -222,11 +222,17 @@ msgstr "Raport Nou"
 msgid "Weekly"
 msgstr "Săptămânal"
 
+msgid "weekly"
+msgstr "săptămânal"
+
 msgid "Week"
 msgstr "Săptămâna"
 
 msgid "Monthly"
 msgstr "Lunar"
+
+msgid "monthly"
+msgstr "lunar"
 
 msgid "Month"
 msgstr "Luna"
@@ -277,3 +283,149 @@ msgstr "Noiembrie"
 
 msgid "December"
 msgstr "Decembrie"
+
+#: reports/templates/reports/report_results.html
+msgid "Total Hours"
+msgstr "Total Ore"
+
+#: reports/templates/reports/report_results.html
+msgid "Total Entries"
+msgstr "Total Înregistrări"
+
+#: reports/templates/reports/report_results.html
+msgid "Average Hours"
+msgstr "Ore Medii"
+
+#: reports/templates/reports/report_results.html
+msgid "Period"
+msgstr "Perioada"
+
+#: reports/templates/reports/report_results.html
+msgid "Export PDF"
+msgstr "Exportă PDF"
+
+#: reports/templates/reports/report_results.html
+msgid "Export Excel"
+msgstr "Exportă Excel"
+
+#: reports/templates/reports/report_results.html
+msgid "Summary by Activity"
+msgstr "Sumar pe Activitate"
+
+#: reports/templates/reports/report_results.html
+msgid "Activity Code"
+msgstr "Cod Activitate"
+
+#: reports/templates/reports/report_results.html
+msgid "Activity Name"
+msgstr "Nume Activitate"
+
+#: reports/templates/reports/report_results.html
+msgid "Funding Source"
+msgstr "Sursă de Finanțare"
+
+#: reports/templates/reports/report_results.html
+msgid "Entries"
+msgstr "Înregistrări"
+
+#: reports/templates/reports/report_results.html
+msgid "No data found for the selected period"
+msgstr "Nu s-au găsit date pentru perioada selectată"
+
+#: reports/templates/reports/report_results.html
+msgid "Totals:"
+msgstr "Totaluri:"
+
+#: reports/templates/reports/report_results.html
+msgid "Detailed Timesheet Entries"
+msgstr "Înregistrări Detaliate de Activitate"
+
+#: reports/templates/reports/report_results.html
+msgid "Date"
+msgstr "Data"
+
+#: reports/templates/reports/report_results.html
+msgid "Start Time"
+msgstr "Ora Început"
+
+#: reports/templates/reports/report_results.html
+msgid "End Time"
+msgstr "Ora Sfârșit"
+
+#: reports/templates/reports/report_results.html
+msgid "Hours"
+msgstr "Ore"
+
+#: reports/templates/reports/report_results.html
+msgid "Back to Timesheets"
+msgstr "Înapoi la Activități"
+
+#: reports/templates/reports/generate_report.html
+msgid "Report Period"
+msgstr "Perioada Raport"
+
+#: reports/templates/reports/generate_report.html
+msgid "Report Type"
+msgstr "Tip Raport"
+
+#: reports/templates/reports/generate_report.html
+msgid "Start Date"
+msgstr "Data Început"
+
+#: reports/templates/reports/generate_report.html
+msgid "End Date"
+msgstr "Data Sfârșit"
+
+#: reports/views.py
+msgid "Custom Period Report"
+msgstr "Raport Perioadă Personalizată"
+
+#: reports/views.py
+msgid "Custom Report"
+msgstr "Raport Personalizat"
+
+#: reports/views.py
+msgid "View and manage all your timesheet entries"
+msgstr "Vizualizați și administrați activitățile"
+
+#: reports/views.py
+msgid "No timesheets found. Create your first one!"
+msgstr "Nu s-a găsit nici o activitate. Creați una!"
+
+#: reports/views.py
+msgid "Found"
+msgstr "S-au găsit"
+
+#: reports/views.py
+msgid "timesheet(s)"
+msgstr "activități"
+
+msgid "Actions"
+msgstr "Acțiuni"
+
+msgid "Edit Timesheet"
+msgstr "Editează Pontaj"
+
+msgid "Update Timesheet"
+msgstr "Actualizează Pontaj"
+
+msgid "Delete Timesheet"
+msgstr "Șterge Pontaj"
+
+msgid "Are you sure you want to delete this timesheet?"
+msgstr "Ești sigur că vrei să ștergi acest pontaj?"
+
+msgid "Cancel"
+msgstr "Anulează"
+
+msgid "Delete"
+msgstr "Șterge"
+
+msgid "Select Activity"
+msgstr "Selectează Activitate"
+
+msgid "Select Funding Source"
+msgstr "Selectează Sursă Finanțare"
+
+msgid "An error occurred while deleting the timesheet"
+msgstr "A apărut o eroare la ștergerea pontajului"
