--- a/locale/ro/LC_MESSAGES/django.po
+++ b/locale/ro/LC_MESSAGES/django.po
@@ -410,10 +410,7 @@ msgid "Update Timesheet"
 msgstr "Actualizează Pontaj"
 
 msgid "Delete Timesheet"
-msgstr "Șterge Pontaj"
-
-msgid "Are you sure you want to delete this timesheet?"
-msgstr "Ești sigur că vrei să ștergi acest pontaj?"
+msgstr "Ștergeți Pontaj"
 
 msgid "Cancel"
 msgstr "Anulează"
@@ -429,3 +426,24 @@ msgstr "Selectează Sursă Finanțare"
 
 msgid "An error occurred while deleting the timesheet"
 msgstr "A apărut o eroare la ștergerea pontajului"
+
+msgid "Upload Activities Excel"
+msgstr "Încărcați activități cu excel"
+
+msgid "Upload a Single Activity"
+msgstr "Încărcați o singură activitate"
+
+msgid "PAL Activity List"
+msgstr "Listă activități PAL"
+
+msgid "Analyze the activities according to the annual workplan"
+msgstr "Analizați activitățile conform Planului Anual de Lucru"
+
+msgid "Annual Work Plan - Activities"
+msgstr "Planul Anual de Lucru - Activități"
+
+msgid "Total Activities"
+msgstr "Total Activități"
+
+msgid "Are you sure you want to delete this timesheet?"
+msgstr "Sunteți sigur că doriți să ștergeți aceste date?"
